# Git_Commands

./: .gitignore  README.md  Test  a.out  a.txt  async.cpp  colours_terminal.sh  constref.cpp  dlopen.c  file.c  folding.txt  hello.c  ipaddr.c  lock_cond.c  oracle_task3_b.py  packaged_task.cpp  promise.cpp  redef.c  ref.cpp  smartp.cpp  std_ref.cpp  template.cpp  thread_detach.c  uniquep.cpp
SOMEIP/: hello_world_client.cpp  hello_world_service.cpp  helloworld-local.json
async/: async.cpp
boost/: CMakeLists.txt  a.out  bash.sh  chrono.cpp  interrupt_thread.cpp  mutex.cpp  thread.cpp
boost/asio/: 1a.cpp  1b.cpp  1c.cpp  1e.cpp  1f.cpp  2a.cpp  2b.cpp  2c.cpp  2d.cpp  2e.cpp  2f.cpp  3a.cpp  3b.cpp  4a.cpp  4b.cpp  5a.cpp  5b.cpp  5c.cpp  6a.cpp  6c.cpp  7a.cpp  7c.cpp  CMakeLists.txt  async_wait.cpp  async_wait1.cpp  readme.md
c++/: cast.cpp  const.cpp  destructor.cpp  inheritance.cpp  main.cpp  protected.cpp  template.hpp
c++/pimpl/: main.cpp  pimpl.hpp
cmake/: CMakeLists.txt  test.cpp
cmake/FooBar/bar/: CMakeLists.txt
cmake/FooBar/foo/: CMakeLists.txt
cmake/basic/: CMakeLists.txt  readme  sqrt.cpp  test.cpp
cmake/basic/lib/: sqrt.cpp
cmake/basic/subdir/: CMakeLists.txt
cmake/foonathan.net/: CMakeLists.txt  README.md
cmake/foonathan.net/example/: CMakeLists.txt  example.cpp
cmake/foonathan.net/include/my_library/: header-a.hpp
cmake/foonathan.net/src/: CMakeLists.txt  config.hpp.in  src.cpp
cmake/foonathan.net/test/: test.cpp
cmake/foonathan.net/tool/: CMakeLists.txt  tool.cpp
cmake/subdir/: CMakeLists.txt
cryptography/AES_CBC/Crypto++ CBC Test/: Driver.cpp
design_pattern/: ak47.hpp  battleField.cpp  cscope.out  gun.hpp  missile.hpp  readme  tags  weaponController.hpp  weaponInterface.hpp
function_ptr/: function_pointer.cpp  functor.cpp
lib/: compile.sh  et.h  et.h.gch  main.c  mat.c  mat.h  sin.c  sin.h
linker/: main.c  swap.c  test
linux/: client.cpp  compile.sh  dlopen.c  dlopen1.c  main.c  readme.md  socket.c  sqrt.cpp  sqrt.hpp  symbols.c  test  test1
linux/basic_lib/: main.c  sqrt.c  sqrt.h
linux/memory/: README  mallinfo.c  mtrace.c  mtrace.out  print_caller.c  typecasting.cpp
linux/shared_lib_ex/: readme.md  test
multithreading/: thread.cpp  thread_id.cpp
opencv/: CMakeLists.txt  blank_image.cpp  display_camera.cpp  display_camera2.cpp  display_image.cpp  image_shades.cpp  write_video.cpp
profiles/: bash_profile  bashrc  vimrc
profiles/vim/: .netrwhist
python/: debug_encrypt.py  debug_func_oracle.py  debug_oracle.py  encrypt.py  oracle.py  oracle_task3_b.py  secret.txt  test.py
python/QT/: hello.py
shell_scripts/: env_shell_var_imp.txt  file
tlpi-dist/: CHANGES
tlpi-dist/namespaces/: ns_exec.c
tlpi-dist/pmsg/: mq_notify_siginfo.c
